# mhs-itmo-sem01-python

./: README.md
hw_1/: README.md  nl.py  t1.txt  t2.txt  tail.py  wc.py
hw_1/artifacts/: nl_t1.txt  nl_t2.txt  nl_t3.txt  nl_t4.txt  t1.txt  t2.txt  tail_t2.txt  tail_t4.txt  wc_t2.txt
hw_2/: Dockerfile  README.md  convert_to_tex.py  main.py  pyproject.toml
hw_2/artifacts/: table.tex  table_and_png.tex  test_pypi_project_link.txt
hw_2/src/latex_gen_ggerlakh/: convert_to_tex.py  example.py
hw_2/src/latex_gen_ggerlakh.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hw_2/src/latex_gen_ggerlakhERE.egg-info/: PKG-INFO  SOURCES.txt
hw_3/: README.md  matrices.py  test3_1.py  test3_2.py  test3_3.py
hw_3/artifacts/3.1/: matrix*.txt  matrix+.txt  matrix@.txt
hw_3/artifacts/3.2/: matrix*.txt  matrix+.txt  matrix@.txt  matrix_t_4.txt
hw_3/artifacts/3.3/: A.txt  AB.txt  B.txt  C.txt  CD.txt  D.txt  hash.txt
hw_4/: README.md  task4_1.py  task4_2.py  task4_3.py
hw_4/artifacts/4.1/: fib_calc.txt
hw_4/artifacts/4.2/: integral_calc.txt
hw_4/artifacts/4.3/: processes_queue.txt
